--- a/public/client.html
+++ b/public/client.html
@@ -7,229 +7,13 @@
     <title>Upcoming Garage Sales Map</title>
     <link rel="stylesheet" href="/css/shared.css">
     <link rel="stylesheet" href="/css/client.css">
+    <link rel="stylesheet" href="/css/mobile.css">
     <link rel="stylesheet" href="/css/logo.css">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#007bff">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-title" content="Events Map">
-    <style>
-        /* 
-         * Define CSS variables for safe area insets.
-         * These are provided by the browser on devices with notches or home indicators
-         * when `viewport-fit=cover` is used in the viewport meta tag.
-         */
-        :root {
-            --safe-area-inset-top: env(safe-area-inset-top, 0px);
-            --safe-area-inset-right: env(safe-area-inset-right, 0px);
-            --safe-area-inset-bottom: env(safe-area-inset-bottom, 0px);
-            --safe-area-inset-left: env(safe-area-inset-left, 0px);
-        }
-
-        /*
-         * Apply safe area padding to the main body to avoid system UI.
-         * This pushes the entire layout inward to avoid notches or rounded corners.
-         */
-        body {
-            padding-top: var(--safe-area-inset-top);
-            padding-left: var(--safe-area-inset-left);
-            padding-right: var(--safe-area-inset-right);
-        }
-
-        /*
-         * Adjust absolutely positioned UI elements to respect the safe areas.
-         */
-        #center-location-button {
-            top: calc(16px + var(--safe-area-inset-top));
-            right: calc(10px + var(--safe-area-inset-right));
-        }
-
-        /* Apply safe area padding to the fixed bottom navigation bar. */
-        #bottom-nav {
-            /* Add 5px of padding PLUS the safe area inset. */
-            padding-bottom: calc(5px + var(--safe-area-inset-bottom));
-            /* Account for left/right safe areas, especially in landscape mode. */
-            padding-left: var(--safe-area-inset-left);
-            padding-right: var(--safe-area-inset-right);
-        }
-
-        /*
-         * Hide UI elements that are not needed when running as a standalone PWA.
-         * The QR code is not needed if the app is already installed on the device.
-         * The install button is also not needed.
-         */
-        body.standalone-app #qr-code-container,
-        body.standalone-app #install-pwa-item {
-            display: none;
-        }
-
-        .btn-install {
-            padding: 8px 16px;
-            border-radius: 5px;
-            border: none;
-            cursor: pointer;
-            font-weight: 600;
-            background-color: #007bff;
-            color: white;
-            transition: background-color 0.2s;
-        }
-
-        /* Update Available Toast Notification */
-        .toast {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translate(-50%, 150%); /* Start hidden below screen */
-            background-color: #2c3e50; /* A darker, modern blue-gray */
-            color: white;
-            padding: 16px;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-            z-index: 2000;
-            display: flex;
-            align-items: center;
-            gap: 15px;
-            transition: transform 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
-        }
-        .toast.show {
-            transform: translate(-50%, 0); /* Slide in from bottom */
-        }
-        .toast button {
-            background-color: #3498db; /* A lighter blue for the button */
-            color: white;
-            border: none;
-            padding: 8px 12px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: 600;
-        }
-
-        /*
-         * On mobile landscape, dock the event list as a floating panel
-         * in the bottom-left corner for a better map-centric experience.
-         */
-        @media screen and (orientation: landscape) and (max-height: 600px) {
-            #list-panel {
-                position: fixed;
-                /* Position as a floating "island" with margins on all sides */
-                left: calc(10px + var(--safe-area-inset-left));
-                bottom: calc(10px + var(--safe-area-inset-bottom));
-
-                /* Define a reasonable size for the panel */
-                width: 350px;
-                max-width: 45vw; /* Responsive width */
-                /* Let the panel grow with content, but cap its height at 80% of the viewport. */
-                max-height: 80vh;
-
-                /* Override default panel styles (e.g., sliding up from bottom) */
-                top: auto;
-                transform: none !important;
-                transition: none !important;
-                visibility: visible !important;
-                display: flex;
-                flex-direction: column;
-
-                /* Apple-like "Glassmorphism" effect */
-                background: rgba(242, 242, 247, 0.8); /* Light, semi-transparent background */
-                -webkit-backdrop-filter: blur(20px) saturate(180%);
-                backdrop-filter: blur(20px) saturate(180%);
-                border-radius: 16px; /* Round all corners for a floating panel */
-                border: 1px solid rgba(255, 255, 255, 0.125); /* Subtle border to catch light */
-                box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1); /* Softer, more diffuse shadow */
-                z-index: 1010; /* Above map, below modals */
-            }
-
-            /* Make UI elements within the panel more compact in this view */
-            #list-panel .panel-header {
-                padding: 4px 8px;
-                background-color: transparent; /* Ensure header is transparent for blur effect */
-            }
-
-            #list-panel .panel-content {
-                background-color: transparent;
-            }
-
-            #list-panel .panel-title {
-                font-size: 1rem;
-            }
-
-            #list-panel .header-action-btn {
-                padding: 4px;
-            }
-
-            #list-panel .header-action-btn svg {
-                width: 20px;
-                height: 20px;
-            }
-
-            #list-panel .header-action-text {
-                display: none;
-            }
-
-            #list-panel #search-input {
-                font-size: 0.8rem;
-                padding: 6px 6px 6px 30px;
-            }
-
-            #list-panel .search-icon {
-                width: 14px;
-                height: 14px;
-                left: 8px;
-            }
-
-            #list-panel .filter-pill {
-                font-size: 0.7rem;
-                padding: 2px 6px;
-            }
-
-            #list-panel .card {
-                padding: 6px;
-                flex-direction: row;
-                align-items: center;
-                gap: 8px;
-                background-color: transparent; /* Make cards transparent */
-                border-bottom: 1px solid rgba(128, 128, 128, 0.2); /* Use a line separator */
-                border-radius: 0; /* Remove any card-specific rounding */
-                box-shadow: none; /* Remove any base shadow */
-            }
-
-            #list-panel .card:last-child {
-                border-bottom: none; /* No separator on the last item */
-            }
-
-            #list-panel .card-slider {
-                width: 50px;
-                height: 50px;
-                flex-shrink: 0;
-            }
-
-            #list-panel .card-title {
-                font-size: 0.85rem;
-                margin-bottom: 0;
-            }
-
-            #list-panel .card-description {
-                font-size: 0.75rem;
-                line-height: 1.2;
-                display: -webkit-box;
-                -webkit-line-clamp: 2;
-                -webkit-box-orient: vertical;
-                overflow: hidden;
-            }
-
-            #list-panel .mini-pills-container {
-                display: none;
-            }
-
-            /* Hide UI elements that are redundant or conflict with this layout */
-            #bottom-nav,
-            #list-panel .panel-handle,
-            #collapse-button,
-            #expand-button {
-                display: none !important;
-            }
-        }
-    </style>
 </head>
 
 <body>
@@ -242,11 +26,6 @@
             <text x="283" y="40" font-family="Arial" font-size="48" fill="#FF5733" stroke="#FFF" stroke-width="1.5px" stroke-linejoin="round" paint-order="stroke fill">.</text>
             <text x="15" y="80" font-family="Arial" font-size="48" fill="#FF5733" stroke="#FFF" stroke-width="1.5px" stroke-linejoin="round" paint-order="stroke fill">today</text>
         </svg>
-    </div>
-
-    <div id="update-toast" class="toast">
-        A new version is available.
-        <button id="refresh-app-btn">Refresh</button>
     </div>
 
     <div id="loading-overlay">
